[package]
name = "rai-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = { version = "1.7.2", features = ["json"] }
futures = "0.3.28"
pin-project-lite = "0.2.9"
bytes = "1.4.0"
eventsource-stream = "0.2.3"
serde = "1.0"
serde_json = "1.0.82"
